Fix right edge cropping of the filter button (#484)

--- a/Radzen.Blazor/themes/components/blazor/_grid.scss
+++ b/Radzen.Blazor/themes/components/blazor/_grid.scss
@@ -876,5 +876,4 @@ $column-drag-handle-hover-color: $column-drag-handle-color !default;
 
 .rz-filter-button {
     margin-right: 10px;
-    width: 3.5rem;
 }
